townify/ws/ws-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ws
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: townify-ws
  namespace: ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    containers:
      - name: ws-server
        image: mohammedayad10/townify-ws:latest
        ports:
          - containerPort: 3008
        resources:
          request:
            cpu: "1000m"
          limit:
            cpu: "1000m"
---
apiVersion: apps/v1
kind: Service
metadata:
  name: ws-service
  namespace: ws
spec:
  selector:
    app: ws-server
  ports:
    - name: ws-service
      protocol: TCP
      port: 3008
      targetPort: 3008
  type: ClusterIP
