townify/ws/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-ingress
  namespace: ws
spec:
  ingressClassName: nginx
  rules:
    - host: townify-ws.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-service
                port:
                  number: 3008
